# typelist-utils

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.md  README.md  sonar-project.properties
.github/workflows/: build_and_test.yml  codeql.yml
include/typelist_utils/: sort.hpp  traits.hpp  utils.hpp
test/: main.cpp  test_sort.cpp  test_utils.cpp
